# hw-vx-config

./: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
docs/: DOCUMENTATION.md  PROTOCOL.md  README.md
docs/api/: cli.md  constants.md  device.md  formatting.md  models.md  transport.md
examples/: library_usage.py  rfid_usage.py  server_uhf.py
src/hw_vx_config/: __init__.py  __main__.py  cli.py  constants.py  device.py  formatting.py  models.py  rfid.py  transport.py  ui.py
tests/: conftest.py  test_cli.py  test_cli_interactive.py  test_constants.py  test_device.py  test_formatting.py  test_models.py  test_rfid.py  test_transport.py  test_ui.py
