[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hw-vx-config"
version = "1.0.1"
description = "Network configuration tool for HW-VX6330K / HW-VX6346KL serial-to-Ethernet modules"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "xynogen" }]
keywords = [
  "hw-vx6330k",
  "hw-vx6346kl",
  "serial-to-ethernet",
  "network-config",
  "udp",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Networking",
  "Typing :: Typed",
]

# No runtime dependencies — pure stdlib
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]
typing = ["mypy>=1.0"]
cov = ["pytest-cov>=4.0"]

[project.urls]
Homepage = "https://github.com/xynogen/hw-vx-config"
Repository = "https://github.com/xynogen/hw-vx-config"
Issues = "https://github.com/xynogen/hw-vx-config/issues"

[project.scripts]
hw-vx-config = "hw_vx_config.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# ─── Ruff ────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["hw_vx_config"]

# ─── Pytest ──────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

# ─── Mypy ────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# ─── Coverage ────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["hw_vx_config"]
omit = ["*/cli.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
